test_data/neg/ss/655291/Windows/655291.ss3_simp.rtf
>655291
MKKRYKVTALFEDGTSQCLVVGNFSSPTNAWCAAMRNLTPEGIARVQHYNVEEISK
CCCEEEEEEEEECCCCEEEEEECCCCCCCHHHHHHHCCCCCCCCECCEECCCCCCC
